<resources>
    <string name="app_name">Semantic</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accountFragmentTitle">Личный кабинет</string>
    <string name="personalAccountTitle">Лицевой счёт</string>
    <string name="balance">Баланс</string>
    <string name="nextPayTitle">Следующая оплата</string>
    <string name="hintNoBalance">Недостаточно средств для оплаты интернета</string>
    <string name="hintLowBalance">Текущего баланса не хватит, чтобы оплатить завтрашний день</string>
    <string name="informationTitle">Информация</string>
    <string name="tariff">Тариф</string>
    <string name="subscriptionFeeTitle">Абонентская плата</string>
    <string name="accountStateTitle">Состояние счёта</string>
    <string name="news">Новости</string>
    <string name="lastNews">Последние новости</string>
    <string name="services">Услуги</string>
    <string name="reports">Отчёты</string>
    <string name="callToSupport">Позвонить в службу поддержки</string>
    <string name="allNews">Все новости</string>
    <string name="accountReplenishment">Пополнения счёта</string>
    <string name="replenishment">Пополнение</string>
    <string name="replenish">Пополнить</string>
    <string name="accountDebiting">Списания</string>
    <string name="allDebiting">Все списания</string>
    <string name="seeAllReplenishments">Все пополнения</string>
    <string name="logout">Выйти из аккаунта</string>

    <string name="state_unlocked">Разблокирован</string>


    <string name="accountId">№ %s</string>
    <string name="moneyInRoubles">%s ₽</string>
    <string name="moneyInRoublesPerMonth">%s ₽/мес.</string>
    <string name="moneyReplenishment">+%s ₽</string>
    <string name="moneyWithdraw">-%s ₽</string>
    <string name="support">Поддержка</string>

    <string name="defaultSupportNumber">+7 (495) 540–99–55</string>
    <string name="sign_in_username">Имя пользователя</string>
    <string name="sign_in_password">Пароль</string>
    <string name="sign_in_no_account">Не знаете имя пользователя?</string>
    <string name="sign_in_enter">Войти</string>

    <string name="error_no_connection">Отсутствует связь с сервером. Проверьте подключение к интернету</string>
    <string name="semantic">Semantic</string>
    <string name="channel_description">Уведомления о балансе</string>
    <string name="auth_hint_description">Использовать данное приложение могут только пользователи интернет-провайдера Semantic Telecom, который осуществляет свою деятельность на территории Красногорского района Московской области. Данные для входа такие же, как если бы вы авторизовывались через сайт stat.semantic.su.</string>
    <string name="min_payment_sum_300">Минимальная сумма опалаты 300 рублей</string>
    <string name="any_bank_card">Любой банковской картой</string>
    <string name="can_pay_by_bank_card">Можно оплатить банковской картой</string>
    <string name="min_payment_sum_1">Минимальная сумма опалаты 1 рубль</string>
    <string name="payment_methods">Способы оплаты</string>
    <string name="write_it_on_the_payment_page">Укажите его на странице оплаты</string>
    <string name="your_account_id">Номер вашего лицевого счёта</string>
    <string name="plus">+</string>

    <plurals name="afterDays">
        <item quantity="zero">нет дней</item>
        <item quantity="one">через %1$d день</item>
        <item quantity="two">через %1$d дня</item>
        <item quantity="few">через %1$d дня</item>
        <item quantity="many">через %1$d дней</item>
        <item quantity="other">через %1$d котов</item>
    </plurals>

    <string-array name="reports">
        <item>По платежам</item>
        <item>По услугам</item>
    </string-array>
</resources>