<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollViewMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:animateLayoutChanges="true">

        <LinearLayout
            android:id="@+id/constraintLayoutWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/semantic"
                android:textSize="40sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:hint="@string/sign_in_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:minLines="1"
                    android:backgroundTint="@color/white"
                    android:nextFocusDown="@+id/textInputEditTextPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/sign_in_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:minLines="1"
                    android:backgroundTint="@color/white"
                    android:nextFocusDown="@+id/buttonEnter"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewDontKnowCredentials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="0dp"
                android:paddingTop="4dp"
                android:paddingEnd="4dp"
                android:paddingBottom="4dp"
                android:text="@string/sign_in_no_account"
                android:textColor="@color/purple_500"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clipChildren="false"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonEnter"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:insetLeft="0dp"
                        android:minHeight="50dp"
                        android:insetTop="0dp"
                        android:insetRight="0dp"
                        android:insetBottom="0dp"
                        android:letterSpacing="0.0"
                        android:text="@string/sign_in_enter"
                        android:textAllCaps="false"
                        android:textSize="17sp"
                        app:cornerRadius="6dp" />

                    <ProgressBar
                        android:id="@+id/progressBarEnter"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:translationZ="10dp"
                        android:visibility="gone"
                        tools:indeterminateTint="@color/white"
                        tools:visibility="visible" />

                </FrameLayout>


            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
